Docs: Modernization and restructuring
- Add new documentation files:
  - getting-started.rst (onboarding guide)
  - job-templates-overview.rst (categorized templates & examples)

- Update jenkins.rst:
  - Modernize examples (Java 17, Maven 3.9)
  - Add job categories & triggers section
  - Replace raw HTML tables with list-tables
  - Add CentOS 7 deprecation notices
  - Point to lf-* templates in global-jjb

- Update cloud-images.rst:
  - Add current image recommendations
  - Include deprecation notices
  - Rewrite intro for clarity

- README improvements:
  - Add project summary & quick links
  - Restore Read the Docs link
  - Normalize formatting

- General fixes:
  - Spelling/grammar corrections
  - Line wrapping consistency (~80 cols)
  - Remove legacy/obsolete content
  - Escape literals properly

The change aligns docs with current toolchains, improves
discoverability, and reduces maintenance overhead.

Change-Id: If6f06cdb1880afae4bfe5a291e00c27a28376136
Signed-off-by: Anil Belur <abelur@linuxfoundation.org>